test/sema/lambdas/variable_coerce_capture.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  let n = 0;

  // CHECK: [[# @LINE + 1 ]]:31: error: capturing lambda '(lambda@<source>:[[# @LINE + 1 ]]:31)' cannot be coerced into function type '(number) -> number'
  mut f: (number) -> number = ->(x){ return n; };

  // CHECK: [[# @LINE + 1 ]]:7: error: capturing lambda '(lambda@<source>:[[# @LINE + 1 ]]:7)' cannot be coerced into function type '(number) -> number'
  f = ->(x){ return n; };
}
